--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    Fore more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-  -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new education consultant project.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="Amii">
+  <meta property="og:url" content="https://amii.edu.ey">
+  <meta property="og:title" content="Amii - Education Consultant">
+  <meta property="og:description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/oma-store-9fcb3.appspot.com/o/amii%2Ffacebook.jpg?alt=media&token=3f719cf5-9528-467a-abd5-d4601da4826f">
+
+  <title>Amii - Education Consultant</title>
+  <meta name="title" content="Amii - Education Consultant">
+  <meta name="description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,19 +26,14 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo.png"/>
 
-  <title>amii</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
 
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-<!-- This script installs service_worker.js to provide PWA functionality to
-     application. For more information, see:
-     https://developers.google.com/web/fundamentals/primers/service-workers -->
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
-
-<script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+  <script>
       var firebaseConfig = {
           apiKey: "AIzaSyCvfHgGzBUiuUO1zVzcHjjlSkFbXWPkyZs",
           authDomain: "amii-edu.firebaseapp.com",
@@ -51,13 +46,13 @@
 
       firebase.initializeApp(firebaseConfig);
     </script>
-<script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2741928489');
-      });
-    }
-  </script>
-<script src="main.dart.js" type="application/javascript"></script>
+  <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('flutter-first-frame', function () {
+          navigator.serviceWorker.register('flutter_service_worker.js?v=643296537');
+        });
+      }
+    </script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
