--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
+  <base href="/Amii/">
   <meta property="og:type" content="Amii">
-  <meta property="og:url" content="https://amii.edu.ey">
+  <meta property="og:url" content="https://amii.edu.et">
   <meta property="og:title" content="Amii - Education Consultant">
   <meta property="og:description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
   <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/oma-store-9fcb3.appspot.com/o/amii%2Ffacebook.jpg?alt=media&token=3f719cf5-9528-467a-abd5-d4601da4826f">
