--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo.png"/>
 
-  <title>amii</title>
+  <title>Amii</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
