--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
+  <base href="/Amii/">
   <meta property="og:type" content="Amii">
   <meta property="og:url" content="https://amii.edu.et">
   <meta property="og:title" content="Amii - Education Consultant">
