--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       firebase.initializeApp(firebaseConfig);
     </script>
   <script>
-    var serviceWorkerVersion = '2488469061';
+    var serviceWorkerVersion = '4256938035';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -104,5 +104,43 @@
       loadMainDartJs();
     }
   </script>
+<center>
+  <nav aria-labelledby="Amii - Education Consultancy">
+    <h1 id="description">Amii - Education Consultancy</h1>
+  </nav>
+</center>
+<style type="text/css">
+  #loading {
+    position : absolute;
+    bottom : 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    height : 40px;
+    margin-top : 40px;
+    font-size: medium;
+  }
+</style>
+<p id="loading" style="text-align:center;">Loading</p>
 </body>
+<footer>
+  <style type="text/css">
+  #footer {
+    position : absolute;
+    bottom : 0;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    height : 40px;
+    margin-top : 40px;
+    font-size: medium;
+  }
+</style>
+  <center>
+     <h2 id="footer">Provides seamless education opportunity for students looking to study abroad</h2>
+  </center>
+
+</footer>
 </html>
