--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-Ca">
+<html lang="am">
 <head>
   <base href="/">
   <meta property="og:type" content="Amii">
@@ -24,9 +24,11 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+
 <script>
       const firebaseConfig = {
           apiKey: "AIzaSyCvfHgGzBUiuUO1zVzcHjjlSkFbXWPkyZs",
@@ -41,7 +43,7 @@
       firebase.initializeApp(firebaseConfig);
     </script>
   <script>
-    var serviceWorkerVersion = '2817748836';
+    var serviceWorkerVersion = '3911269559';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
