--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
     <div class="appBar" style="background-color: #15153e;">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
-            <a href="index.html" id="title">
+            <a href="index" id="title">
             Amii
             </a>
                 <b> 
-                <a class="textButton" href="about.html">
+                <a class="textButton" href="about">
                     About
                 </a>
                 </b>
-                <a class="textButton"  href="contact.html">
+                <a class="textButton"  href="contact">
                     Contact
                 </a>
         </ul></div>
