--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="sizedBox"></div>
 
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
-            <a href="index.html" id="title">Amii</a>
-                <a class="textButton" href="about.html">
+            <a href="index" id="title">Amii</a>
+                <a class="textButton" href="about">
                     About
                 </a>
-                <a class="textButton"  href="contact.html">
+                <a class="textButton"  href="contact">
                     Contact
                 </a>
         </ul></div>
@@ -54,7 +54,7 @@
                 </div>
             
         <div class="sizedBox"></div>
-        <a href="study.html">
+        <a href="study">
             <button class="elevetedButton">
                 Check Scholarships
             </button>
@@ -95,7 +95,7 @@
                 </div>
             
         <div class="sizedBox"></div>
-        <a href="travel.html">
+        <a href="travel">
             <button class="elevetedButton">
                 Discover Countries
             </button>
