--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@
     <div class="appBar">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
-            <a href="index.html" id="title">Amii</a>
+            <a href="index" id="title">Amii</a>
                 <b> 
-                <a class="textButton" href="about.html">
+                <a class="textButton" href="about">
                     About
                 </a>
                 </b>
-                <a class="textButton"  href="contact.html">
+                <a class="textButton"  href="contact">
                     Contact
                 </a>
         </ul></div>
