--- a/study.html
+++ b/study.html
@@ -12,11 +12,11 @@
     <div class="appBar" style="background-color: #15153e;">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
-            <a href="index.html" id="title">Amii</a>
-                <a class="textButton" href="about.html">
+            <a href="index" id="title">Amii</a>
+                <a class="textButton" href="about">
                     About
                 </a>
-                <a class="textButton"  href="contact.html">
+                <a class="textButton"  href="contact">
                     Contact
                 </a>
         </ul></div>
@@ -49,7 +49,7 @@
     <div class="bigSizedBox"></div>
 
     <center>
-    <a class="elevetedButton" style="width: 150px;" href="app.html">
+    <a class="elevetedButton" style="width: 150px;" href="app">
         Start Application
     </a>
     <div class="sizedBox"></div>
