--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:type" content="Amii">
+    <meta property="og:url" content="https://amii.edu.et/contact">
+    <meta property="og:title" content="Amii - Contact">
+    <meta property="og:description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/oma-store-9fcb3.appspot.com/o/amii%2Ffacebook.jpg?alt=media&token=3f719cf5-9528-467a-abd5-d4601da4826f">
+    <meta name="title" content="Amii - Contact">
+    <meta name="description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
+    <meta charset="UTF-8">
+  
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="amii">
+    <link rel="apple-touch-icon" href="icons/logo512.png">
+  
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png"/>
+  
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Contact - Amii</title>
+    <title> Amii - Contact </title>
 </head>
 <body>
     
@@ -46,9 +65,9 @@
             Phone number
         </div>
         <div class="sizedBox"></div>
-        <a class="textButton" href="tel:+251929945151" >
+        <a class="textButton" href="tel:+251935872103" >
             <div class="emphasis">
-                +251-929-945-151
+                +251-935-872-103
             </div>
             </a>
         <div class="regular_txt">
@@ -67,9 +86,9 @@
             Email
         </div>
         <div class="sizedBox"></div>
-                <a class="textButton" href="mailto:Kalebtsena@gmail.com" >
+                <a class="textButton" href="mailto:amiieducationalconsultant@gmail.com" >
             <div class="emphasis">
-                Kalebtsena@gmail.com
+                amiieducationalconsultant@gmail.com
             </div>
             </a>
             <div class="sizedBox"></div>
@@ -84,9 +103,9 @@
             Telegram
         </div>
         <div class="sizedBox"></div>
-             <a class="textButton" href="https://t.me/kaleb4">
+             <a class="textButton" href="https://t.me/Amii_Educational_Consultant">
         <div class="emphasis">
-            t.me/kaleb4
+            Amii_Educational_Consultant
         </div>
         
         <div class="sizedBox"></div>
