--- a/study.html
+++ b/study.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
+    <meta property="og:type" content="Amii - Study">
+  <meta property="og:url" content="https://amii.edu.et/study">
+  <meta property="og:title" content="Amii - Study">
+  <meta property="og:description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/oma-store-9fcb3.appspot.com/o/amii%2Ffacebook.jpg?alt=media&token=3f719cf5-9528-467a-abd5-d4601da4826f">
+
+  <meta name="title" content="Amii - Study">
+  <meta name="description" content="Education consultant service and application for Ethiopia student  looking to study in Canada, Australia, China, Poland, Canada, Russia, Turkey">
+  <meta charset="UTF-8">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="amii">
+  <link rel="apple-touch-icon" href="icons/logo512.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="logo.png"/>
+
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amii - Scholarships</title>
+    <title>Amii - Study</title>
     <link rel="stylesheet" href="main.css">
     <script src="study.js" type="application/javascript" defer></script>
 </head>
