--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 <body>
     <div class="appBar">
         <ul class="appBarItems">
-            <div id="menu" class="column">
+            <!-- <div id="menu" class="column">
                 <div style="height: 2px; width: 20px; background-color: white;"></div>
                 <div class="miniSizedBox"></div>
                 <div style="height: 2px; width: 20px; background-color: white;"></div>
                 <div class="miniSizedBox"></div>
                 <div style="height: 2px; width: 20px; background-color: white;"></div>
-            </div>
+            </div> -->
             
-            <div class="sizedBox"></div>
 
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
             <a href="index" id="title">Amii</a>
