--- a/study.html
+++ b/study.html
@@ -30,7 +30,7 @@
     <script src="study.js" type="application/javascript" defer></script>
 </head>
 <body>
-    <div class="appBar" style="background-color: #15153e;">
+    <div class="appBar"">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
             <a href="index" id="title">Amii</a>
@@ -43,7 +43,6 @@
         </ul></div>
     
     <div class="bigSizedBox"></div>
-    <div class="black">
     <div class="bigSizedBox"></div>
     <ul class="column" >
         <center>
@@ -64,7 +63,6 @@
 
         </center>
     </ul>
-    </div>
 
     <div class="smoke">
     <div class="bigSizedBox"></div>
