--- a/travel.html
+++ b/travel.html
@@ -28,7 +28,7 @@
     <script src="travel.js" defer></script>
 </head>
 <body>
-    <div class="appBar" style="background-color: #15153e;">
+    <div class="appBar"">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
             <a href="index" id="title">Amii</a>
@@ -41,7 +41,6 @@
         </ul></div>
     
     <div class="bigSizedBox"></div>
-    <div class="black">
     <div class="bigSizedBox"></div>
     
     <ul class="column" >
@@ -62,9 +61,8 @@
 
         </center>
     </ul>
-    </div>
 
-    <div class="smoke">
+    <div style="background-color: white;">
     <div class="bigSizedBox"></div>
     <center>    
         <a class="elevetedButton" style="width: 150px;" href="app">
