--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
 
     <div class="bigSizedBox"></div>
     
-    <ul class="wrap" style="padding-left: 0px;">
+    <ul class="wrap" style="padding-left: 0px; background-color: white;">
         <div class="extraBig_box" id="padA">
                <div class="bigSizedBox"></div>
             <marquee behavior="slide" direction="up"  scrollamount=10>
-            <div class="extraBig_txt" style="color: white;">Looking to</div>
+            <div class="extraBig_txt" style="color: cornflowerblue;">Looking to</div>
             </marquee>
             <marquee behavior="slide" direction="up" scrollamount=10 scrolldelay=100>
             <div class="extraBig_txt" style="color: yellow;">Study</div>
         </marquee>
         <marquee behavior="slide" direction="up" scrollamount=15 scrolldelay=200>
-            <div class="extraBig_txt" style="color: white;">abroad?</div>
+            <div class="extraBig_txt" style="color: cornflowerblue;">abroad?</div>
             </marquee>
         <div class="sizedBox"></div>
-            <div style="color: white;">
+            <div style="color: black;">
                 When it comes to finding and applying scholarship things dont happen overnight howerver we are here to lend you a hand in finding the right college and apply. 
                 </div>
             
