--- a/study.html
+++ b/study.html
@@ -41,21 +41,21 @@
                     Contact
                 </a>
         </ul></div>
+    <ul class="column" style="background-color: white;">
+        <center>
     
     <div class="bigSizedBox"></div>
     <div class="bigSizedBox"></div>
-    <ul class="column" >
-        <center>
             
         <div id = "padA" class="extraBig_txt">
         <div class="white">
-            <div class="w3-animate-opacity">
+            <div class="w3-animate-opacity" style="color: cornflowerblue;">
             Popular Scholarship
             </div>
         </div>
         </div>
         <div id = "padLR" class="label_txt">
-        <div class="white">
+        <div class="white"style="color: cornflowerblue;">
             Here are some countries available 
         </div>    
         <div class="sizedBox"></div>
@@ -68,7 +68,7 @@
     <div class="bigSizedBox"></div>
 
     <center>
-    <a class="elevetedButton" style="width: 150px;" href="app">
+    <a class="elevetedButton" style="width: 150px; text-decoration: none;" href="app">
         Start Application
     </a>
     <div class="sizedBox"></div>
