--- a/travel.html
+++ b/travel.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="travel.js" defer></script>
 </head>
-<body>
+<body st>
     <div class="appBar"">
         <ul class="appBarItems">
             <img src="assets/logo.png" , id="amii_logo_image" , height="40" , width="40">
@@ -40,20 +40,20 @@
                 </a>
         </ul></div>
     
-    <div class="bigSizedBox"></div>
-    <div class="bigSizedBox"></div>
     
-    <ul class="column" >
+    <ul class="column" style="background-color: white;">
         <center>
+    <div class="bigSizedBox""></div>
+    <div class="bigSizedBox"></div>
         <div id = "padA" class="extraBig_txt">
-        <div class="white">
+        <div style="color: cornflowerblue;">
             <div class="w3-animate-opacity">
                 Discover Countries
             </div>
         </div>
         </div>
         <div id = "padLR" class="label_txt">
-        <div class="white">
+        <div style="color: cornflowerblue;">
             Here are some countries available 
         </div>    
         <div class="sizedBox"></div>
@@ -65,7 +65,7 @@
     <div style="background-color: white;">
     <div class="bigSizedBox"></div>
     <center>    
-        <a class="elevetedButton" style="width: 150px;" href="app">
+        <a class="elevetedButton" style="width: 150px; text-decoration: none;" href="app">
             Start Application
         </a>
         <div class="sizedBox"></div>
